--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
@@ -15,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
