--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
