feat: add page icon

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -2,6 +2,10 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
+    {
+      "src": "favicon.icon",
+      "type": "image/x-icon"
+    }
 
   ],
   "start_url": ".",
