--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
